--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=mnist
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:pg
 
 volumes:
   postgres_data:
