--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:pg
+      - postgres_data:/app/pg
     restart: unless-stopped
 
   streamlit:
