--- a/postgresql.conf
+++ b/postgresql.conf
@@ -11,7 +11,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/app/pg
+      - postgres_data:/var/lib/postgresql/data
       - ./postgresql.conf:/etc/postgresql/postgresql.conf  # Mount custom config
       - ./pg_log:/var/log/postgresql  # Log directory
     command: >
