--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,50 @@
 version: '3.8'
 
 services:
-  postgres:
+  db:
     image: postgres:latest
+    container_name: mnist-database  # Named container
     environment:
-      POSTGRES_DB: mnist
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_HOST_AUTH_METHOD: trust  # Temporarily allow connections without password (debug only)
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: postgres      # Admin username
+      POSTGRES_PASSWORD: postgres  # Admin password
+      POSTGRES_DB: mnist           # Database name (auto-created on startup)
+      POSTGRES_HOST_AUTH_METHOD: trust  # Explicit authentication method
     volumes:
-      - postgres_data:/app/pg
-      - ./postgresql.conf:/etc/postgresql/postgresql.conf  # Mount custom config
-      - ./pg_log:/var/log/postgresql  # Log directory
-    command: >
-      postgres -c config_file=/etc/postgresql/postgresql.conf
-      -c log_statement=all
-      -c log_min_messages=debug1
-      -c log_directory=/var/log/postgresql
-    restart: unless-stopped
+      # Persistent data storage
+      - postgres_data:/var/lib/postgresql/data  
+      # SQL script that creates tables (runs ONLY on first initialization)
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql  
+    ports:
+      - "5432:5432"  # Expose PostgreSQL port
+    
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d mnist"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    
+    networks:
+      - app-network
 
-  streamlit:
+  app:
     build: .
+    container_name: mnist-app  # Named container
     ports:
       - "8501:8501"
     depends_on:
-      postgres:
-        condition: service_healthy
+      db:
+        condition: service_healthy  # Wait for DB to be ready
     environment:
-      - POSTGRES_HOST=postgres
-      - POSTGRES_DB=mnist
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - DB_HOST=db
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=mnist
+    networks:
+      - app-network
 
 volumes:
-  postgres_data:
+  postgres_data:  # Named volume for persistent storage
 
-# Health check to ensure PostgreSQL is ready
-healthcheck:
-  test: ["CMD-SHELL", "pg_isready -U postgres -d mnist"]
-  interval: 5s
-  timeout: 5s
-  retries: 5
+networks:
+  app-network:
+    driver: bridge
